tests/ci/expected/0339-invalid-string-character.error.c.expected
ci/0339-invalid-string-character.error.c:2:6: error: invalid string character
    "\e";
     ^
